--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">recruit-backpacker</string>
+    <string name="title">Local Weather</string>
+    <string name="location">Local</string>
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="unit_humidity">%</string>
+    <string name="unit_temperature">°C</string>
 </resources>
