API 요청 실패 처리(Resource.Error) 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="tomorrow">Tomorrow</string>
     <string name="unit_humidity">%</string>
     <string name="unit_temperature">°C</string>
+
+    <string name="refresh_error">정보를 불러오는데 실패하였습니다.</string>
 </resources>
