API 요청 실패 처리 변경 - Event 클래스 추가 - 요청 전체 실패 또는 일부 실패에 대한 분기 추가 - activity의 livedata 구독 로직 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="unit_temperature">°C</string>
 
     <string name="refresh_error">정보를 불러오는데 실패하였습니다.</string>
+    <string name="refresh_some_error">일부 정보를 불러오는데 실패하였습니다.</string>
 </resources>
